feat: hunter status GUI update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,31 +13,24 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-##############################################################################
-# Catkin
-##############################################################################
-
-# qt_build provides the qt cmake glue, roscpp the comms for a default talker
 find_package(catkin REQUIRED COMPONENTS
   roscpp
-  std_msgs sensor_msgs
-  )
-include_directories(${catkin_INCLUDE_DIRS})
-# Use this to define what the package will export (e.g. libs, headers).
-# Since the default here is to produce only a binary, we don't worry about
-# exporting anything. 
-catkin_package()
+  cv_bridge
+  sensor_msgs
+  std_msgs
+  hunter_msgs
+)
 
-##############################################################################
-# Qt Environment
-##############################################################################
-
-# included via the dependency call in package.xml
 find_package(Qt5 COMPONENTS Widgets REQUIRED)
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-##############################################################################
-# Sections
-##############################################################################
+find_package(Qwt REQUIRED)
+
+include_directories(${catkin_INCLUDE_DIRS}
+  include/baemin_operator
+)
+
+catkin_package()
 
 file(GLOB QT_FORMS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} ui/*.ui)
 file(GLOB QT_RESOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} resources/*.qrc)
@@ -47,17 +40,10 @@ QT5_ADD_RESOURCES(QT_RESOURCES_CPP ${QT_RESOURCES})
 QT5_WRAP_UI(QT_FORMS_HPP ${QT_FORMS})
 QT5_WRAP_CPP(QT_MOC_HPP ${QT_MOC})
 
-##############################################################################
-# Sources
-##############################################################################
-
 file(GLOB_RECURSE QT_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} FOLLOW_SYMLINKS src/*.cpp)
 
-##############################################################################
-# Binaries
-##############################################################################
-
 add_executable(baemin_operator ${QT_SOURCES} ${QT_RESOURCES_CPP} ${QT_FORMS_HPP} ${QT_MOC_HPP})
-target_link_libraries(baemin_operator Qt5::Widgets Qt5::Gui ${QT_LIBRARIES} ${catkin_LIBRARIES})
-install(TARGETS baemin_operator RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+target_link_libraries(baemin_operator Qt5::Widgets Qt5::Gui ${QT_LIBRARIES} ${catkin_LIBRARIES} Qwt::Qwt)
+
+install(TARGETS baemin_operator RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
